# el

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  PLAN.md  README.md
crates/el-core/: Cargo.toml
crates/el-core/src/: error.rs  lib.rs  test_utils.rs  traits.rs  transfer.rs
crates/el-parquet/: Cargo.toml
crates/el-parquet/src/: batch_size.rs  compression.rs  destination.rs  lib.rs  source.rs
crates/el-parquet/tests/: dogfood.rs
crates/el-postgres/: Cargo.toml
crates/el-postgres/src/: lib.rs  types.rs
crates/transferred-core/: Cargo.toml
crates/transferred-core/src/: lib.rs  report.rs
crates/transferred-parquet/: Cargo.toml
crates/transferred-parquet/src/: destination.rs  source.rs
crates/transferred-parquet/tests/: dogfood.rs
crates/transferred-postgres/: Cargo.toml
crates/transferred-postgres/src/: lib.rs  types.rs
