[workspace]
resolver = "3"
members = [
    "crates/el-core",
    "crates/el-postgres",
    "crates/el-parquet",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/skatromb/el"

[workspace.dependencies]
arrow = { version = "58", features = ["prettyprint"] }
arrow-schema = "58"
parquet = { version = "58", features = ["arrow", "async"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
tokio-stream = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
tempfile = "3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
