[package]
name = "el-parquet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
el-core = { path = "../el-core" }
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
el-core = { path = "../el-core", features = ["dev"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
