[package]
name = "el-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
el-core = { path = "../el-core" }
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-postgres = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
