[package]
name = "transferred-parquet"
description = "Parquet source and destination for the transferred data transfer engine."
readme = "../../README.md"
keywords = ["transferred", "parquet", "arrow", "etl", "data-transfer"]
categories = ["database", "filesystem"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
transferred-core = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
transferred-core = { workspace = true, features = ["dev"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
