[package]
name = "transferred-postgres"
description = "Postgres source for the transferred data transfer engine."
readme = "../../README.md"
keywords = ["transferred", "postgres", "arrow", "etl", "data-transfer"]
categories = ["database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
transferred-core = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-postgres = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
